--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -285,6 +285,10 @@ jobs:
           to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=pir_cleaned/"
       - aws-s3/sync:
           aws-region: AWS_REGION
+          from: "s3://sfc-main-datasets/domain=CQC/dataset=postcode_corrections/"
+          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=postcode_corrections/"
+      - aws-s3/sync:
+          aws-region: AWS_REGION
           from: "s3://sfc-main-pipeline-resources/models/"
           to: "s3://$(cat terraform/pipeline/pipeline_resources_bucket_name)/models/"
 
