pdate dockerfiles with new structure

--- a/lambdas/create_dataset_snapshot/Dockerfile
+++ b/lambdas/create_dataset_snapshot/Dockerfile
@@ -8,8 +8,8 @@ COPY lambdas/create_dataset_snapshot/requirements.txt .
 RUN pip install -r requirements.txt
 
 # Copy function code
-COPY lambdas/create_dataset_snapshot/lambda_function.py .
-COPY lambdas/utils/snapshots.py utils/
+COPY lambdas/create_dataset_snapshot/create_dataset_snapshot.py .
+COPY lambdas/create_dataset_snapshot/utils lambdas/create_dataset_snapshot/utils/
 COPY utils/column_names utils/column_names/
 COPY schemas schemas/
 COPY polars_utils polars_utils/
