--- a/lambdas/check_dataset_equality/Dockerfile
+++ b/lambdas/check_dataset_equality/Dockerfile
@@ -15,4 +15,4 @@ COPY utils/column_names utils/column_names/
 COPY projects/tools projects/tools/
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
-CMD [ "lambda_function.lambda_handler" ]
+CMD [ "check_dataset_equality.lambda_handler" ]
