--- a/lambdas/create_dataset_snapshot/Dockerfile
+++ b/lambdas/create_dataset_snapshot/Dockerfile
@@ -15,4 +15,4 @@ COPY schemas schemas/
 COPY polars_utils polars_utils/
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
-CMD [ "lambda_function.lambda_handler" ]
+CMD [ "create_dataset_snapshot.lambda_handler" ]
