--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,10 +255,10 @@ jobs:
           aws-region: AWS_REGION
           from: "s3://sfc-main-datasets/domain=CQC_delta/dataset=delta_locations_api/"
           to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC_delta/dataset=delta_locations_api/"
-      - aws-s3/sync:
-          aws-region: AWS_REGION
-          from: "s3://sfc-main-datasets/domain=CQC_delta/dataset=cqc_locations_03_full_flattened/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC_delta/dataset=cqc_locations_03_full_flattened/"
+      # - aws-s3/sync:
+      #     aws-region: AWS_REGION
+      #     from: "s3://sfc-main-datasets/domain=CQC_delta/dataset=cqc_locations_03_full_flattened/"
+      #     to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC_delta/dataset=cqc_locations_03_full_flattened/"
       - aws-s3/sync:
           aws-region: AWS_REGION
           from: "s3://sfc-main-datasets/domain=CQC_delta/dataset=full_providers_api/"
