--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - aws-cli/setup:
-          region: "eu-west-2"
+          region: $AWS_REGION
       - run:
           name: Build Docker Images
           command: |
@@ -217,6 +217,8 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - aws-cli/setup:
+          region: $AWS_REGION
       - run:
           name: Setup Environment Variables
           command: |
@@ -248,6 +250,8 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - aws-cli/setup:
+          region: $AWS_REGION
       - run:
           name: Setup Environment Variables
           command: |
