--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,6 @@ parameters:
     default: ""
 
 orbs:
-  aws-s3: circleci/aws-s3@4.1
   aws-cli: circleci/aws-cli@5.4.1
 
 jobs:
@@ -259,54 +258,30 @@ jobs:
           command: |
             echo 'export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID_non_prod}"' >> "$BASH_ENV"
             echo 'export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY_non_prod}"' >> "$BASH_ENV"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=CQC/dataset=delta_locations_api/version=3.1.0/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=delta_locations_api/version=3.1.0/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=CQC/dataset=delta_providers_api/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=delta_providers_api/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=CQC/dataset=cqc_locations_03_full_flattened/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=cqc_locations_03_full_flattened/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=CQC/dataset=cqc_providers_03_full_flattened/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=cqc_providers_03_full_flattened/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=CQC/dataset=cqc_locations_04_full_cleaned_registered/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=cqc_locations_04_full_cleaned_registered/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=CQC/dataset=postcode_corrections/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=postcode_corrections/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=ONS/dataset=postcode_directory_cleaned/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ONS/dataset=postcode_directory_cleaned/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=ASCWDS/dataset=workplace/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ASCWDS/dataset=workplace/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=ASCWDS/dataset=workplace_cleaned/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ASCWDS/dataset=workplace_cleaned/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=ASCWDS/dataset=worker/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ASCWDS/dataset=worker/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=ASCWDS/dataset=worker_cleaned/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ASCWDS/dataset=worker_cleaned/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=capacity_tracker/dataset=capacity_tracker_care_home_cleaned/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=capacity_tracker/dataset=capacity_tracker_care_home_cleaned/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=capacity_tracker/dataset=capacity_tracker_non_residential_cleaned/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=capacity_tracker/dataset=capacity_tracker_non_residential_cleaned/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=CQC/dataset=pir_cleaned/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=pir_cleaned/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-datasets/domain=ind_cqc_filled_posts/dataset=ind_cqc_06_estimated_filled_posts/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ind_cqc_filled_posts/dataset=main_ind_cqc_06_estimated_filled_posts/"
-      - aws-s3/sync:
-          from: "s3://sfc-main-pipeline-resources/models/"
-          to: "s3://$(cat terraform/pipeline/pipeline_resources_bucket_name)/models/"
+            echo 'export DATASET_BUCKET=$(cat terraform/pipeline/datasets_bucket_name)' >> "$BASH_ENV"
+            echo 'export RESOURCES_BUCKET=$(cat terraform/pipeline/pipeline_resources_bucket_name)' >> "$BASH_ENV"
+      - run:
+          name: Copy main datasets to non-prod dataset bucket
+          command: |
+            aws s3 sync "s3://sfc-main-datasets/domain=CQC/dataset=delta_locations_api/version=3.1.0/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=delta_locations_api/version=3.1.0/"
+            aws s3 sync "s3://sfc-main-datasets/domain=CQC/dataset=delta_providers_api/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=delta_providers_api/"
+            aws s3 sync "s3://sfc-main-datasets/domain=CQC/dataset=cqc_locations_03_full_flattened/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=cqc_locations_03_full_flattened/"
+            aws s3 sync "s3://sfc-main-datasets/domain=CQC/dataset=cqc_providers_03_full_flattened/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=cqc_providers_03_full_flattened/"
+            aws s3 sync "s3://sfc-main-datasets/domain=CQC/dataset=cqc_locations_04_full_cleaned_registered/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=cqc_locations_04_full_cleaned_registered/"
+            aws s3 sync "s3://sfc-main-datasets/domain=CQC/dataset=postcode_corrections/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=postcode_corrections/"
+            aws s3 sync "s3://sfc-main-datasets/domain=ONS/dataset=postcode_directory_cleaned/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ONS/dataset=postcode_directory_cleaned/"
+            aws s3 sync "s3://sfc-main-datasets/domain=ASCWDS/dataset=workplace/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ASCWDS/dataset=workplace/"
+            aws s3 sync "s3://sfc-main-datasets/domain=ASCWDS/dataset=workplace_cleaned/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ASCWDS/dataset=workplace_cleaned/"
+            aws s3 sync "s3://sfc-main-datasets/domain=ASCWDS/dataset=worker/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ASCWDS/dataset=worker/"
+            aws s3 sync "s3://sfc-main-datasets/domain=ASCWDS/dataset=worker_cleaned/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ASCWDS/dataset=worker_cleaned/"
+            aws s3 sync "s3://sfc-main-datasets/domain=capacity_tracker/dataset=capacity_tracker_care_home_cleaned/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=capacity_tracker/dataset=capacity_tracker_care_home_cleaned/"
+            aws s3 sync "s3://sfc-main-datasets/domain=capacity_tracker/dataset=capacity_tracker_non_residential_cleaned/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=capacity_tracker/dataset=capacity_tracker_non_residential_cleaned/"
+            aws s3 sync "s3://sfc-main-datasets/domain=CQC/dataset=pir_cleaned/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC/dataset=pir_cleaned/"
+            aws s3 sync "s3://sfc-main-datasets/domain=ind_cqc_filled_posts/dataset=ind_cqc_06_estimated_filled_posts/" "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ind_cqc_filled_posts/dataset=main_ind_cqc_06_estimated_filled_posts/"
+      - run:
+          name: Copy models to non-prod dataset
+          command: |
+            aws s3 sync "s3://sfc-main-pipeline-resources/models/" "s3://$(cat terraform/pipeline/pipeline_resources_bucket_name)/models/"
 
   terraform-destroy:
     working_directory: /tmp/project
