--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -293,15 +293,12 @@ jobs:
       - aws-cli/setup:
           region: $AWS_REGION
       - run:
-          name: Setup Environment
-          command: |
-            echo 'export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID_non_prod}"' >> "$BASH_ENV"
-            echo 'export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY_non_prod}"' >> "$BASH_ENV"
-            echo 'export CIRCLE_BRANCH="<< pipeline.parameters.GHA_Meta >>"' >> "$BASH_ENV"
-            echo 'export SANITISED_CIRCLE_BRANCH=$(echo ${CIRCLE_BRANCH:0:30} | tr -c "[:alnum:]\n" "-" | tr "[:upper:]" "[:lower:]")' >> "$BASH_ENV"
-      - run:
           name: terraform destroy
           command: |
+            export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID_non_prod}"
+            export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY_non_prod}"
+            export CIRCLE_BRANCH="<< pipeline.parameters.GHA_Meta >>"
+            export SANITISED_CIRCLE_BRANCH=$(echo ${CIRCLE_BRANCH:0:30} | tr -c "[:alnum:]\n" "-" | tr "[:upper:]" "[:lower:]")
             # --- Safeguard to never destroy main ---
             if [ "$SANITISED_CIRCLE_BRANCH" = "main" ]; then
               echo "Skipping destroy for main branch"
