--- a/projects/_03_independent_cqc/_04_model/fargate/Dockerfile
+++ b/projects/_03_independent_cqc/_04_model/fargate/Dockerfile
@@ -10,8 +10,8 @@ ENV PYTHONPATH=/app
 COPY polars_utils /app/polars_utils
 COPY projects/_03_independent_cqc/_04_model/utils /app/projects/_03_independent_cqc/_04_model/utils
 COPY projects/_03_independent_cqc/_04_model/registry/model_registry.py /app/projects/_03_independent_cqc/_04_model/registry/model_registry.py
-COPY utils/column_names/ind_cqc_pipeline_columns /app/utils/column_names/ind_cqc_pipeline_columns
-COPY utils/column_values/categorical_column_values /app/utils/column_values/categorical_column_values
+COPY utils/column_names /app/utils/column_names/
+COPY utils/column_values /app/utils/column_values/
 
 # Copy all python jobs to WORKDIR
 COPY projects/_03_independent_cqc/_04_model/fargate/*.py .
