1313 - commented out running tests in deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -439,12 +439,12 @@ workflows:
       - copy-main-data:
           requires:
             - terraform-apply
-      - test:
-          requires:
-            - terraform-apply
-          filters:
-            branches:
-              ignore: main
+      # - test:
+      #     requires:
+      #       - terraform-apply
+      #     filters:
+      #       branches:
+      #         ignore: main
 
   delete-development-environment:
     when: << pipeline.parameters.GHA_Action >>
